# azure-ai-foundry-jumpstart

./: .cspell.json  .gitignore  GitVersion.yml  ISSUE_CONTENT_UPDATE_ARCHITECTURE_DIAGRAMS.md  README.md  azure-ai-foundry-jumpstart.sln  azure.yaml  llms.txt  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  run_tech_support_tests.py  run_tests.py  validate_imports.py
.devcontainer/: devcontainer.json  npx-wrapper.sh  post-create.sh
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/agents/: azure-verified-modules-bicep.agent.md  critical-thinking.agent.md  developer-flow-gpt-5.agent.md  expert-dotnet-software-engineer.agent.md  implementation-plan.agent.md  janitor.agent.md  mentor.agent.md  principal-software-engineer.agent.md  specification.agent.md  🎭 generator.agent.md  🎭 healer.agent.md  🎭 planner.agent.md
.github/chatmodes/: developer-flow-sonnet-4.chatmode.md  janitor.chatmode.md  principal-software-engineer.chatmode.md  specification.chatmode.md
.github/prompts/: create-github-action-workflow-specification.prompt.md  create-implementation-plan.prompt.md  create-oo-component-documentation.prompt.md  create-spec.prompt.md  create-specification.prompt.md  create_github_issue_feature_from_spec.prompt.md  create_spec.prompt.md  data_generator_create_tool.prompt.md  python_best_practices.prompt.md  python_design_pattern_review.prompt.md  update-avm-modules-in-bicep.prompt.md  update-implementation-plan.prompt.md  update-llms.prompt.md  update-specification.prompt.md  update_avm_modules_in_bicep.prompt.md
.github/upgrades/: dotnet-upgrade-plan.md  dotnet-upgrade-report.md
.github/workflows/: build-arm-templates.yml  continuous-delivery.yml  continuous-deployment.yml  continuous-integration.yml  copilot-setup-steps.yml  delete-infrastructure.yml  deploy-infrastructure.yml  deploy-template.yml  e2e-test.yml  lint-and-publish-bicep.yml  lint-and-test-python-apps.yml  provision-infrastructure.yml  python-tests.yml  set-build-variables.yml  test-template.yml  validate-bicep.yml  validate-infrastructure.yml
docs/: ARCHITECTURE.md  CONFIGURATION_OPTIONS.md  DEPLOYMENT_MODES.md  DEVOPS.md  FOLDERS.md  OVERVIEW.md  PROJECT_MODES.md  QUICK_CONFIGURATIONS.md  README.md  TECHNOLOGY.md
docs/design/: ARCHITECTURE.md  DEVOPS.md  OVERVIEW.md  README.md  TECHNOLOGY.md
docs/diagrams/: azure-ai-foundry-jumpstart-hub-zero-trust.drawio  azure-ai-foundry-jumpstart-public.drawio  azure-ai-foundry-jumpstart-zero-trust.drawio  azure-ai-foundry-resources.drawio  microsoft-foundry-jumpstart-public.drawio  microsoft-foundry-jumpstart-zero-trust.drawio
infra/: abbreviations.json  bicepconfig.json  main.bicep  main.bicepparam  main.json  main.parameters.json  sample-model-deployments.json  sample-openai-models.json
infra/project-mode/: main.bicepparam  main.json  sample-openai-models.json
infra/sample-model-deployments/: README.md  sample-model-deployments-gpt-51.json  sample-model-deployments-gpt-realtime.json
infra/v1/: abbreviations.json  main.bicep  main.bicepparam  main.json  sample-ai-foundry-projects.json  sample-openai-models.json
infra/v2/: FOUNDRY_PROJECT_TYPES.md  main.bicep  main.bicepparam  sample-ai-foundry-projects.json  sample-data-containers.json
plan/: plan-remove-hub-mode-support.prompt.md  refactor-initiative-analyzer-centric-1.md
sample-data/financial-transactions/: df6026cb-b95e-4f1b-9762-55c2d142949d.json  statement_checking_2849bec5-3204-496c-8569-39b7ea945bfd.txt  statement_checking_376da6e0-a7ca-4154-820e-b5e89cea0cea.txt  statement_checking_45189e2e-4016-460a-9d30-983867c1ea8f.txt  statement_checking_5eb7f147-331b-438e-92a8-0ef7c9e3341d.txt  statement_checking_6f063c17-3dc8-42c2-b89e-669cc9d88e77.txt  statement_checking_9f0827d7-8f90-4d32-9dee-197a4a348470.txt  statement_checking_a31594b4-1d7c-45db-b380-bcb762171c76.txt  statement_checking_b8d65d8e-5f75-4cad-b455-2e14b2fb14ab.txt  statement_checking_c9979dd4-cf86-4843-9ebe-dc8524e95b61.txt  statement_checking_fdff40f1-8800-442b-9184-28110d223ddf.txt
sample-data/healthcare-records/: record_Clinic_Note_Cardiology_1cd6c89f-1c89-4788-8833-ac9dcb4f4184.yaml  record_Clinic_Note_Cardiology_1eedc0c8-76d7-44a3-aa49-12fd0975f8bf.yaml  record_Clinic_Note_Cardiology_3ac35507-c193-463b-9a27-23fe6c1bb697.yaml  record_Clinic_Note_Cardiology_4bfc8832-2bf8-4f2b-8bf2-962775d8c093.yaml  record_Clinic_Note_Cardiology_5276dd7f-c4aa-4255-8780-f9aa15a59e7e.yaml  record_Clinic_Note_Cardiology_7a0d11b3-b478-4a88-a2e8-fd09cf179285.yaml  record_Clinic_Note_Cardiology_7c91c03f-43ff-4a30-9793-bfc89e89b250.yaml  record_Clinic_Note_Cardiology_8df2f213-6ddd-4b85-a5f0-0ed005d65b96.yaml  record_Clinic_Note_Cardiology_9d66ae61-a784-484f-a816-5e09350f7ad9.yaml  (+22 more)
scripts/: Compress-SampleData.ps1  Upload-SampleData.ps1  Upload-SampleData.sh  upload_sample_data.ps1  upload_sample_data.sh
spec/: process-continuous-delivery.md  process-continuous-integration.md  sample-data-deployment.md  sample-tech-support-chat-agent-sk-dotnet.md  spec-infrastructure-deployment-bicep-avm.md  spec-process-continuous-delivery.md  spec-sample-critical-thinking-chat-ai-inference-python.md  spec-sample-tech-support-chat-agent-sk-dotnet.md  spec-tool-initiative-analyzer-ai-backlog-analysis.md  tool-create-ai-search-index-with-llamaindex.md  tool-create-ai-search-index.md  tool-tech-support-chat-agent-dotnet.md
src/create_search_index/: README.md  __init__.py  __main__.py  cli.py  engine.py  pyproject.toml  requirements.txt
src/create_search_index/docs/: DESIGN.md
src/data_generator/: README.md  __init__.py  cli.py  engine.py  pyproject.toml  retail_product_test.py  tool.py
src/data_generator/docs/: DESIGN.md
src/data_generator/tests/: __init__.py  conftest.py  test_engine.py  test_tool.py
src/data_generator/tools/: __init__.py  financial_transaction.py  healthcare_record.py  insurance_claim.py  legal_contract.py  retail_product.py  tech_support.py
tests/: conftest.py  direct_test_tech_support.py
(+913 files in other folders)
